<resources>
    <string name="app_name">Hospital_Management</string>
    <string name="menuTitle">Staff Menu</string>
    <string name="addStaff">Add Staff</string>
    <string name="staffView">View Staff</string>
    <string name="staffDelete">Delete Staff</string>
    <string name="staffUpdate">Update Staff</string>
    <string name="mainMenu">Main Menu</string>
    <string name="title_activity_staff_add">Staff_add</string>
    <string name="title_activity_staff__addn">staff_Addn</string>

    <string name="ADDPATIENT">ADD PATIENT</string>

    <string name="VIEWPATIENTLIST">VIEW PATIENT LIST</string>

    <string name="patientname">Patient Name :</string>

    <string name="pname"/>

    <string name="age"/>

    <string name="location"/>

    <string name="contactnumber"/>

    <string name="diseases"/>

    <string name="gender"/>

    <string name="guardianName"/>

    <string name="Age">Age :</string>

    <string name="Address">Address :</string>

    <string name="ContactNo">Contact Number :</string>

    <string name="Diseases">Diseases :</string>

    <string name="Gender">Gender :</string>

    <string name="GuardianName">Guardian Name :</string>

    <string name="Register">Register</string>

    <string name="patientList">Patients List</string>

    <string name="AddNewPatient">NEW PATIENT</string>

    <string name="viewDetails">VIEW DETAILS</string>

    <string name="deleteDetails">DELETE DETAILS</string>

    <string name="Lname">Name :</string>

    <string name="Lage">Age :</string>

    <string name="Laddress">Address</string>

    <string name="Ldisease">Disease</string>

    <string name="Lcontact">Contact Number :</string>

    <string name="Lgender">Gender :</string>

    <string name="Lguardian">Guardian Name :</string>
    <string name="Update">UPDATE DETAILS</string>
</resources>
