<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patientList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-114dp">

        <LinearLayout
            android:id="@+id/lv"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/Lname"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#140202"
                android:textColorLink="#00090101"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/Lage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textColorLink="#00090101"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/paddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/Laddress"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textColorLink="#00090101"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pdisease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/Ldisease"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textColorLink="#00090101"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pphone"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/Lcontact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pgender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/Lgender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pgurdian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:text="@string/Lguardian"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="20sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>