<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".staff_menu">

    <ImageButton
        android:id="@+id/btnStaffUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="staffUpdate"
        app:layout_constraintBottom_toBottomOf="@+id/btnStaffDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStaffDelete"
        app:layout_constraintTop_toTopOf="@+id/btnStaffDelete"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/upd" />

    <ImageButton
        android:id="@+id/btnStaffDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="deleteStaff"
        app:layout_constraintEnd_toStartOf="@+id/btnStaffUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/del" />

    <ImageButton
        android:id="@+id/btnStaffView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewStaff"
        app:layout_constraintBottom_toBottomOf="@+id/btnStaffAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStaffAdd"
        app:layout_constraintTop_toTopOf="@+id/btnStaffAdd"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/vie" />

    <ImageButton
        android:id="@+id/btnStaffAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="addStaff"
        app:layout_constraintEnd_toStartOf="@+id/btnStaffView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        app:srcCompat="@drawable/rsz_businessman_add" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/menuTitle"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/addStaff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnStaffAdd"
        app:layout_constraintStart_toStartOf="@+id/btnStaffAdd"
        app:layout_constraintTop_toBottomOf="@+id/btnStaffAdd" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/staffView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnStaffView"
        app:layout_constraintStart_toStartOf="@+id/btnStaffView"
        app:layout_constraintTop_toBottomOf="@+id/btnStaffView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/staffDelete"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnStaffDelete"
        app:layout_constraintStart_toStartOf="@+id/btnStaffDelete"
        app:layout_constraintTop_toBottomOf="@+id/btnStaffDelete" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/staffUpdate"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnStaffUpdate"
        app:layout_constraintStart_toStartOf="@+id/btnStaffUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btnStaffUpdate" />
</androidx.constraintlayout.widget.ConstraintLayout>